--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,4 +2,8 @@
         width: 100%;
         height: 400px;
         padding: 20px;
+        padding-bottom: 20px;
+        padding-top: 20px;
+        padding-right: 20px;
+        padding-left: 20px;
       }
